[package]
name = "mini-lsm-starter"
version = "0.2.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1"
bytes = "1"
clap = { version = "4.4.17", features = ["derive"] }
crossbeam-channel = "0.5.11"
crossbeam-skiplist = "0.1"
farmhash = "1"
moka = "0.9"
nom = "7.1.3"
ouroboros = "0.18"
parking_lot = "0.12"
rand = "0.8.5"
rustyline = "13.0.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
